[gd_scene load_steps=10 format=3 uid="uid://b2uh73stt3je"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_w6lwx"]
[ext_resource type="Theme" uid="uid://dgkf8e14kwrjx" path="res://scenes/theme.tres" id="1_w6uwb"]
[ext_resource type="AudioStream" uid="uid://disasxfs7kb7f" path="res://assets/digg000.mp3" id="3_8hhup"]
[ext_resource type="AudioStream" uid="uid://7thsypan1xh5" path="res://assets/digg001.mp3" id="4_3gigc"]
[ext_resource type="AudioStream" uid="uid://ce4fijxwen5os" path="res://assets/digg002.mp3" id="5_xl6to"]
[ext_resource type="AudioStream" uid="uid://df3cx081o8mia" path="res://assets/digg003.mp3" id="6_3c7dn"]
[ext_resource type="AudioStream" uid="uid://cc7m11p00kcp1" path="res://assets/digg004.mp3" id="7_pv7uj"]
[ext_resource type="AudioStream" uid="uid://drcqy5ewvkpp7" path="res://assets/digg005.mp3" id="8_fwtb4"]
[ext_resource type="AudioStream" uid="uid://cgvvx1iq2yd83" path="res://assets/digg006.mp3" id="9_ncr8o"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_w6uwb")
script = ExtResource("1_w6lwx")

[node name="Lives" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
text = "Lives"
vertical_alignment = 2

[node name="Level" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Level"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Left" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Left"
horizontal_alignment = 2
vertical_alignment = 2

[node name="StonFall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8hhup")

[node name="PushPull" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3gigc")

[node name="BonuFall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xl6to")

[node name="DeadFall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3c7dn")

[node name="OpenDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pv7uj")

[node name="GotaBonu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fwtb4")

[node name="ExitLevl" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ncr8o")

[node name="Elapsed" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 2
